--- a/mvt_digiprint_gui/Converters/Converters.xaml
+++ b/mvt_digiprint_gui/Converters/Converters.xaml
@@ -79,6 +79,10 @@
     <converters:PlcLogNo_Converter          x:Key="PlcLogNo_Converter"/>
     <converters:PuttyVisible_Converter      x:Key="PuttyVisible_Converter"/>
     <converters:PrintQueueCheckVisible_Converter      x:Key="PrintQueueCheckVisible_Converter"/>
+    <converters:PrintQueueSaveCancelVisible_Converter      x:Key="PrintQueueSaveCancelVisible_Converter"/>
+    <converters:PrintQueueSaveCancelLB702Visible_Converter      x:Key="PrintQueueSaveCancelLB702Visible_Converter"/>
+    
+    
     <converters:PuttyDbgVisible_Converter   x:Key="PuttyDbgVisible_Converter"/>
     <converters:RotateRect_Converter        x:Key="RotateRect_Converter"/>
     <converters:ScanLength_Converter        x:Key="ScanLength_Converter"/>
