--- a/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
@@ -112,34 +112,34 @@
         </Grid>
 
         <!-- RIP Settings _____________________________________________________________________________-->
-        <Grid Margin="5,10,5,5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="140" />
-                <ColumnDefinition Width="60" />
-                <ColumnDefinition Width="170"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
+            <Grid Margin="5,10,5,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="140" />
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="170"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
 
-            <TextBlock  Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Print Environment" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
-            <!--
+                <TextBlock  Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Print Environment" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
+                <!--
                 <ig:XamComboEditor Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Width="200" HorizontalAlignment="Left">
                 </ig:XamComboEditor>
                 -->
-            <ComboBox Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"
+                <ComboBox Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"
                     ItemsSource="{Binding PrintEnvList}"
                     SelectedValue="{Binding PrintEnv}"
                     Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
                 />
 
-            <TextBlock Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Orientation" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
-            <igWPF:XamComboEditor Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="1" 
+                <TextBlock Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Orientation" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
+                <igWPF:XamComboEditor Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="1" 
                     HorizontalAlignment="Stretch"
                     ItemsSource="{Binding OrientationList}"
                     Value="{Binding Orientation}"
@@ -148,42 +148,42 @@
                     DropDownResizeMode="None"
                     Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
                     >
-            </igWPF:XamComboEditor>
+                </igWPF:XamComboEditor>
 
-            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 0, 0, 5" Text="Speed"/>
-            <rx:RxComboBox x:Name="CB_Speed"
+                <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 0, 0, 5" Text="Speed"/>
+                <rx:RxComboBox x:Name="CB_Speed"
                     Grid.Row="2" Grid.Column="1"
                     SelectedValue="{Binding Speed}"
                     HorizontalContentAlignment="Right" Margin="0, 0, 0, 5"
                     />
-            <TextBlock  Margin="5, 0, 0, 5" Grid.Row="2" Grid.Column="3" Text="m/min" x:Name="SpeedUnit"/>
+                <TextBlock  Margin="5, 0, 0, 5" Grid.Row="2" Grid.Column="3" Text="m/min" x:Name="SpeedUnit"/>
 
-            <TextBlock  Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="Image Margin" />
-            <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch"/>
-            <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
-                <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
-                <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
-            </StackPanel>
+                <TextBlock  Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="Image Margin" />
+                <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch"/>
+                <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
+                    <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
+                    <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
+                </StackPanel>
 
-            <TextBlock Margin="0, 0, 0, 5" Grid.Row="4" Grid.Column="0" Text="PrintGo Mode" VerticalAlignment="Center"/>
-            <rx:RxComboBox Margin="0, 0, 0, 5" x:Name="CB_PrintGoMode"
+                <TextBlock Margin="0, 0, 0, 5" Grid.Row="4" Grid.Column="0" Text="PrintGo Mode" VerticalAlignment="Center"/>
+                <rx:RxComboBox Margin="0, 0, 0, 5" x:Name="CB_PrintGoMode"
                     Grid.Row="4" Grid.Column="1"
                     SelectedValue="{Binding PrintGoMode}"
                     ImageBox="true"
                     >
-            </rx:RxComboBox>
+                </rx:RxComboBox>
 
-            <TextBlock   Margin="0, 0, 0, 5"   Grid.Row="5" Grid.Column="0" Text="Image Distance" />
-            <common:MvtNumBox  Margin="0, 0, 0, 5"  Grid.Row="5" Grid.Column="1" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" Min="0"/>
-            <StackPanel  Grid.Row="5" Grid.Column="2" Orientation="Horizontal">
-                <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
-                <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
-            </StackPanel>
+                <TextBlock   Margin="0, 0, 0, 5"   Grid.Row="5" Grid.Column="0" Text="Image Distance" />
+                <common:MvtNumBox  Margin="0, 0, 0, 5"  Grid.Row="5" Grid.Column="1" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" Min="0"/>
+                <StackPanel  Grid.Row="5" Grid.Column="2" Orientation="Horizontal">
+                    <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
+                    <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
+                </StackPanel>
 
             </Grid>
         
-            <StackPanel Margin="0, 10, 0, 10" Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="3" x:Name="ShowButtonGrid" 
-                    HorizontalAlignment="Center" Visibility="{Binding Changed, Converter={StaticResource IntToVisible_Converter}}">
+            <StackPanel Margin="0, 10, 0, 10" Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="3"
+                    HorizontalAlignment="Center" Visibility="{Binding Changed, Converter={StaticResource PrintQueueSaveCancelLB702Visible_Converter}}">
                 <common:MvtButton x:Name="SaveButton"   Click="Save_Click" Margin="0,0,10,0" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}">
                     <iconPacks:PackIconMaterial HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="20" Height="20"
                                                 Kind="Check"></iconPacks:PackIconMaterial>
@@ -194,7 +194,7 @@
                                                 Kind="Close"></iconPacks:PackIconMaterial>
                 </common:MvtButton>
             </StackPanel>
-
+        
             <uc:PreviewWeb Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" 
                     Width="250"
                     Height="auto" MinHeight="130"
