--- a/mvt_digiprint_gui/Views/TexView/TexConsumables.xaml
+++ b/mvt_digiprint_gui/Views/TexView/TexConsumables.xaml
@@ -8,7 +8,7 @@
             d:DesignWidth="350">
     <GroupBox Style="{StaticResource MvtGroupBox}" Header="Consumables">
 
-        <StackPanel Grid.Row="1">
+        <StackPanel>
             <rx_uc:PlcParPanel UnitID="Application.GUI_00_001_Main" ReadOnly="True" x:Name="Panel" Visibility="Collapsed">
                 <rx_uc:PlcParCtrl ID="STA_WINDER_DIAMETER_1"            Label="Unwinder Ø"   Unit="mm" Format="f"/>
                 <rx_uc:PlcParCtrl ID="STA_WINDER_DIAMETER_2"            Label="Rewinder Ø"   Unit="mm" Format="f"/>
