--- a/mvt_digiprint_gui/Views/TexView/TexView.xaml
+++ b/mvt_digiprint_gui/Views/TexView/TexView.xaml
@@ -102,7 +102,8 @@
                     <RotateTransform Angle="-20"/>
                 </TextBlock.RenderTransform>
             </TextBlock>
-
         </Grid>
+        
+        <rx_view:TexConsumables Margin="10" Grid.Row="1" Grid.Column="1" x:Name="Consumables"/>
     </Grid>
 </UserControl>
