--- a/mvt_digiprint_gui/Views/UserControls/MouventTopToolBar.xaml
+++ b/mvt_digiprint_gui/Views/UserControls/MouventTopToolBar.xaml
@@ -17,23 +17,13 @@
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <rx_uc:MouventUVToolBar Grid.Column="1" HorizontalAlignment="Left"></rx_uc:MouventUVToolBar>
 
-        <common:MvtButton Grid.Column="2" Margin="15,0,15,0" Name="TxRobotButton" Visibility="{Binding TxRobot, Converter={StaticResource BoolToVisible_Converter}}" 
-                          Click="TxRobot_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" >
-            <Grid>
-                <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Kind="ArrowDownBoldBox" HorizontalAlignment="Center" Width="18" Height="18"/>
-                <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Margin="0,12,0,0" Kind="Tray" Width="30" />
-            </Grid>
-        </common:MvtButton>
-        
-        <rx_uc:MouventSetupButtons Margin="15,0,15,0" Grid.Column="3"></rx_uc:MouventSetupButtons>
-        <common:MvtButton Grid.Column="4" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" x:Name="Button_Test" Click="Test_Clicked" ToolTip="Test" Margin="15, 0, 15, 0">
-            <iconPacks:PackIconFontAwesome Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                                        Style="{StaticResource Mouvent.RoundIconButtonStyle.LightFontAwesomeIcon}" Width="25" Height="25" Kind="TasksSolid"></iconPacks:PackIconFontAwesome>
+        <rx_uc:MouventSetupButtons Margin="15,0,15,0" Grid.Column="2"></rx_uc:MouventSetupButtons>
+        <common:MvtButton Grid.Column="3" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" x:Name="Button_Test" Click="Test_Clicked" ToolTip="Test" Margin="15, 0, 15, 0">
+            <iconPacks:PackIconOcticons Kind="Beaker" Width="25" Height="25" HorizontalAlignment="Stretch" VerticalAlignment="Center" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIconOcticons}"/>
         </common:MvtButton>
 
     </Grid>
