--- a/mvt_digiprint_gui/Views/AlignmentView/SoftwareValueCorrectionView.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/SoftwareValueCorrectionView.xaml
@@ -26,14 +26,21 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Visibility="{Binding ShowSelectionView, Converter={StaticResource BooleanToVisibleConverter}}">
+        <Border Margin="10,5,10,5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Height="30" BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
+            <TextBlock Foreground="#ff303030" FontWeight="SemiBold" FontSize="{StaticResource MvtFontSize}" HorizontalAlignment="Center" VerticalAlignment="Center"
+                       Text="{Binding Name}" x:Name="TX_HeadName"/>
+        </Border>
+
+        <Grid Grid.Row="1" Grid.Column="0" Visibility="{Binding ShowSelectionView, Converter={StaticResource BooleanToVisibleConverter}}">
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
@@ -47,9 +54,18 @@
                     <Image Margin="2" Stretch="Uniform" Width="200" Source="{Binding SelectionRightImageSource}"></Image>
                 </Button>
             </StackPanel>
+            <StackPanel Grid.Row="2"  Margin="10" >
+                <common:MvtButton
+                                     Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}"
+                                 Click="Cancel_Click">
+                    <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}"
+                                        Kind="Close"
+                                        VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20"/>
+                </common:MvtButton>
+            </StackPanel>
         </Grid>
 
-        <Grid Grid.Row="0" Grid.Column="1"  Visibility="{Binding ShowSelectionView, Converter={StaticResource BooleanNotToVisibleConverter}}">
+        <Grid Grid.Row="1" Grid.Column="1"  Visibility="{Binding ShowSelectionView, Converter={StaticResource BooleanNotToVisibleConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
