--- a/mvt_digiprint_gui/Views/UserControls/MouventCommandButtons.xaml
+++ b/mvt_digiprint_gui/Views/UserControls/MouventCommandButtons.xaml
@@ -5,14 +5,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             xmlns:views_settings="clr-namespace:RX_DigiPrint.Views.Settings"
-             xmlns:rx_uc="clr-namespace:RX_DigiPrint.Views.UserControls"
              mc:Ignorable="d"
              d:DesignWidth="190"
              d:DesignHeight="350"
              >
 
-    <Grid  Width="180" Background="{StaticResource Mouvent.MainColorBrush}" ShowGridLines="False">
+    <Grid  Width="200" Background="{StaticResource Mouvent.MainColorBrush}" ShowGridLines="False">
         <Border BorderThickness="1" BorderBrush="Transparent" Grid.Row="0" Grid.ColumnSpan="2" Margin="10, 5, 10 , 5"
             CornerRadius="7, 7, 7, 7" Background="Transparent">
         </Border>
@@ -21,6 +19,7 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
         
@@ -61,8 +60,7 @@
                                             Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Width="25" Height="25" Kind="Power"></iconPacks:PackIconMaterial>
             </common:MvtButton>
 
-
-<!--
+            <!--
             <common:MvtButton Margin="12, 10, 10, 10" Grid.Row="3" Grid.Column="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" x:Name="Button_On" Click="On_Clicked" ToolTip="Switch Printer ON">
                 <iconPacks:PackIconMaterial Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Width="30" Height="30" Kind="PowerOn"></iconPacks:PackIconMaterial>
             </common:MvtButton>
