--- a/mvt_digiprint_gui/Views/PrintSystemExtended/PrintHeadView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemExtended/PrintHeadView.xaml
@@ -83,7 +83,7 @@
             </TextBlock.Text>
         </TextBlock>
 
-        <Grid x:Name="ServiceGrid" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" IsVisibleChanged="ServiceGrid_IsVisibleChanged">
+        <Grid x:Name="ServiceGrid" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="30" MaxHeight="30"/>
                 <RowDefinition Height="30" MaxHeight="30"/>
@@ -112,10 +112,6 @@
 
             <TextBlock Margin="0, 0, 5, 0" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center"
                        Text="{Binding TempCond, Converter={StaticResource HeadVal_ConverterTemp}}"></TextBlock>
-
-            <common:MvtNumBox Margin="2,0,2,0" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                              HorizontalContentAlignment="Right" x:Name="FpVoltage"
-                              TextChanged="FpVoltage_TextChanged" IsInt="True" Min="0" Max="120"/>
 
             <TextBlock Margin="0, 0, 5, 0" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <TextBlock.Text>
